--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -8,7 +8,7 @@ build:
 
 # Build documentation with Mkdocs
 mkdocs:
-   configuration: mkdocs.yml
+   configuration: docs/mkdocs.yml
 
 # Dependencies required to build your docs
 python:
